--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ TENCENT_APP_ID=1301631939
 TENCENT_SECRET_ID=AKIDcwa2hv04ouO4TdEYU60cicBSkiIWh3kz
 TENCENT_SECRET_KEY=NMDoOyfo3vBookvNzmb6nkrSYc6C7WQl
 TENCENT_TOKEN=5faf3e56665a6798f99027d94da139426a6f493820001
-STAGE=prod
+STAGE=feature2
